--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
+
+  padding-top: 100px;
 }
 
 code {
