--- a/src/components/directory/directory.style.css
+++ b/src/components/directory/directory.style.css
@@ -1,13 +1,13 @@
-.page{
+/* .page{
     display: flex;
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
     justify-content: center;
     align-items: center;
     padding: 0 10%;
 }
 .col{
-    width: 100%;
+    max-width: 100%;
     z-index: 2;
 }
 .hello{
@@ -19,7 +19,7 @@
 }
 .im{
     display: block;
-    font-size: 7em;
+    font-size: 6.2em;
     font-weight: 800;
     color:#181d23;
 }
@@ -30,9 +30,11 @@
 .content{
     display: block;
     width: 90%;
-    font-size: 2em;
+    font-size: 1.5em;
     color: #000;
 }
+
+
 .buttons{
     width: 100%;
     position: relative;
@@ -72,4 +74,204 @@ button:hover{
     50%{
         border-color: transparent;
     }
+}
+.icons{
+    display: flex;
+    align-items:flex-end;
+    justify-content: flex-start;
+}
+.icons h1{
+    padding: 5px 10px 0px 10px;
+}
+.my-image{
+    justify-content: center;
+    align-items: center;
+    width: 30em;
+    flex: 1;
+}
+.my-image img{
+    width: 30em;
+    height: auto;
+} */
+
+
+/* .my-image{
+    padding-left: 30px;
+    max-width: 100%;
+    margin: 0 auto;
+    position: relative;;
+}
+.my-image-src{ 
+    height: auto;
+    border-radius: 50%;
+    width: 30em;
+    border: 10px solid #fff;
+    display: block;
+    height: auto; 
+}  */
+
+section{
+    padding: 100px 12%;
+}
+.home{
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    grid-gap: 4rem;   
+}
+
+.home-text h1{
+    margin: 10px 0px 25px;
+    font-size: 45px;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 5px;
+    text-transform: capitalize;
+}
+.im{
+    color: black;
+}
+.nameSurname{
+    color: #022b63;
+}
+
+.home-text h5{
+    margin-bottom: 23px;
+    font-size: 19px;
+    font-weight: 500;
+}
+.home-text .hello{
+    font-weight: 300;
+    display: block;
+    font-size: 25px;
+    letter-spacing: 5px;
+    color:#3d535f;
+}
+.home-text p{
+    line-height: 28px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    display: inline;
+    width: 90%;
+    color: #000;
+    animation: typing 3s steps(150),blink .5s step-end infinite alternate;
+    overflow:hidden;
+    white-space: nowrap;
+}
+@keyframes typing{
+    from{
+        width: 0;
+    }
+}
+.icons h1{
+    width: 35px;
+    height: 15px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    margin-right: 22px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.icons h1:hover{
+    transform: scale(1.1);
+    transition: .5s;
+}
+.btn-div{
+    display: flex;
+    justify-content: space-around;
+}
+.button{
+    display: inline-block;
+    padding: 10px 20px;
+    font-weight: 500;
+    line-height: 24px;
+    transition: ease .40s;
+    border-radius: 30px;
+    font-size: 23px;
+    cursor: pointer;
+    background-color: #3d535f;
+    color: #fff;
+    margin: 40px 5px;
+    letter-spacing: 3px;
+    text-transform: capitalize;
+    box-shadow: 0 15px 10px rgba(0, 0, 0, 0.4);
+}
+.button:hover{
+    transform: scale(1.05);
+    background-color:#3d535f;
+}
+.home-image img{
+    max-width: 100%;
+    width: 540px;
+    height: auto;
+    border-radius: 50%;
+    border:10px solid black;
+}
+
+@media (max-width:1425px){
+    section{
+        padding:70px 3%;
+        transition: .3s;
+    }
+    :root{
+        --big-font:4rem;
+        --h2-font:2.3rem;
+        --p-font:1rem;
+        transition: .3s;
+    }
+}
+@media (max-width:920px){
+    .home{
+        min-height: 80vh;
+    }
+}
+@media (max-width:800px){
+    .home{
+        grid-template-columns:1fr;
+        min-height: 130vh;
+        grid-gap:1rem;
+    }
+    .home-text{
+        padding-top: 55px;
+    }
+    .home-image img{
+        width: 440px;
+        height: auto;
+    }
+    :root{
+        --big-font:3.4rem;
+        --h2-font:2rem;
+    }
+    section{
+        /* padding:65% 3%; */
+        transition: .3s;
+    }
+}
+
+.html5{
+    color: #e34c26;
+}
+.css3{
+    color: #2962ff;
+}
+.javascript{
+    color: #FFD600;
+}
+.react{
+    color: #087ea4;
+}
+.redux{
+    color: #7E57C2;
+}
+.php{
+    color: #777BB3;
+}
+.python{
+    color: #306998;
 }
