--- a/src/routes/projects/projects.style.css
+++ b/src/routes/projects/projects.style.css
@@ -1,8 +1,18 @@
 .projects-container{
     display: grid;
     grid-template-columns: repeat(3,2fr);
-    column-gap: 20px;
-    row-gap: 50px;
+    column-gap: 10px;
+    row-gap: 30px;
     margin: 15px 25px;
     overflow: hidden;
+}
+@media (max-width:768px){
+    .projects-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width:480px){
+    .projects-container{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
