--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
 
 *{
     box-sizing: border-box;
@@ -28,6 +34,6 @@ code {
 .container{
   min-height: 100vh;
   width: 100%;
-}
+} */
 
 
