--- a/src/routes/navigation/navigation.style.css
+++ b/src/routes/navigation/navigation.style.css
@@ -1,4 +1,4 @@
-header{
+/* header{
     position: fixed;
     top: 0px;
     right: 0;
@@ -11,54 +11,54 @@ header{
     transition: all .50s ease;
     box-shadow:0px 0px 5px 0px  black;
     background-color: #fff;
-}
-.webSiteName{
+} */
+/* .webSiteName{
     display: flex;
     align-items: center;
-}
-.webSiteName h3{
+} */
+/* .webSiteName h3{
     color: #022b63;
     font-weight: 700px;
     font-size: 30px;
     letter-spacing: 5px;
-}
+} */
 
 
-.navbar{
+/* .navbar{
     display: flex;
-}
-.navbar a{
+} */
+/* .navbar a{
     color: #022b63;
     font-size: 20px;
     font-weight: 500;
     padding: 5px 0;
     margin: 0 30px;
     transition: all .50s ease;
-}
-.navbar a:hover{
+} */
+/* .navbar a:hover{
     color: #ddd;
-}
+} */
 
-.social-media-links{
+/* .social-media-links{
     display: flex;
     align-items: center;
-}
-.social-media-links a{
+} */
+/* .social-media-links a{
     margin-right: 25px;
     margin: 15px;
     font-size: 23px;
 }
 .social-media-links a:hover{
     color: black;
-}
+} */
 
-.menu-icon{
+/* .menu-icon{
     font-size:30px;
     color:#022b63;
     cursor: pointer;
     z-index: 1220;
     display: none;
-}
+} */
 
 @media(max-width:1280px){
     header{
@@ -104,16 +104,10 @@ header{
     }
     
 }
-.add{
+/* .add{
     cursor: pointer;
 }
 
 .github{
     color: black;
-}
-.twitter{
-    color: #00acee;
-}
-.linkedin{
-    color: #0a66c2;
-}
+} */
