--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body{
 
 /* Spinner*/
 #loadingMain{
-    background-color: #efeeee;
+    /* background-color: #efeeee; */
     color: var(--fg);
     font: 1em/1.5 sans-serif;
     height: 100vh;
